# Courses

./: .gitignore  data.c  data02.c  hello.py  test.py
.unotes/: unotes_meta.json
DB/: temp.txt  实验一 交互式SQL.doc  实验三  数据库完整性.doc  实验二 数据库安全性.doc  实验四 查询优化.doc
Data_structure/: ex02.c  ex04.c  ex04_request.txt  test  test.cpp  test2  test2.cpp
MachingLearning/: Ex04_04.py  ex02.py  obj10__0.xml  (+3 more)
MachingLearning/Exercise/: CMakeLists.txt  defence.txt  label_generater.py  test.py
MachingLearning/Exercise/include/: main.h
MachingLearning/Exercise/label/: obj10__0.xml  obj10__1.xml  obj10__10.xml  obj10__11.xml  obj10__12.xml  obj10__13.xml  obj10__14.xml  obj10__15.xml  obj10__16.xml  obj10__17.xml  obj10__18.xml  obj10__19.xml  obj10__2.xml  obj10__20.xml  obj10__21.xml  obj10__22.xml  obj10__23.xml  obj10__24.xml  obj10__25.xml  obj10__26.xml  obj10__27.xml  obj10__28.xml  obj10__29.xml  obj10__3.xml  obj10__30.xml  obj10__31.xml  obj10__32.xml  obj10__33.xml  obj10__34.xml  obj10__35.xml  obj10__36.xml  obj10__37.xml  obj10__38.xml  obj10__39.xml  obj10__4.xml  obj10__40.xml  obj10__41.xml  obj10__42.xml  obj10__43.xml  obj10__44.xml  (+1400 more)
MachingLearning/Exercise/src/: main.cpp
MachingLearning/Exercise/temp/yolov4/: main.py  main.spec  predict.py  yolo.py
MachingLearning/Exercise/temp2/: .spec  main.spec
MachingLearning/Exercise/temp2/yolo3-pytorch/: 2007_train.txt  main.py  main.spec  predict.py  temp.py  train.py  video.py  voc2yolo.py  voc_annotation.py  yolo.py
MachingLearning/Exercise/temp2/yolo3-pytorch/VOCdevkit/VOC2007/ImageSets/Main/: train.txt
(+101 files in other folders)
